--- a/app/package.json
+++ b/app/package.json
@@ -2,9 +2,6 @@
   "name": "app",
   "version": "0.0.0",
   "private": true,
-  "main": "index.js",
-  "author": "",
-  "description": "",
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -12,15 +9,9 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "express": "latest",
+    "ejs": "~2.5.6",
+    "express": "~4.15.2",
     "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2",
-    "express-generator": "latest",
-    "zombie": "latest",
-    "pg": "latest",
-    "knex": "latest",
-    "bookshelf": "latest",
-    "eslint": "latest"
+    "serve-favicon": "~2.4.2"
   }
 }
