--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,15 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "serve-favicon": "~2.4.2",
+    "express-generator": "latest",
+    "zombie": "latest",
+    "pg": "latest",
+    "knex": "latest",
+    "bookshelf": "latest",
+    "eslint": "latest",
+    "chai": "latest",
+    "mocha": "latest"
   }
 }
