--- a/app/package.json
+++ b/app/package.json
@@ -6,9 +6,7 @@
     "start": "node ./bin/www",
     "test": "mocha"
   },
-  "devDependencies": {
-    "zombie": "2.0.0-alpha11"
-  },
+  "devDependencies": {},
   "dependencies": {
     "bcrypt": "latest",
     "body-parser": "~1.17.1",
@@ -26,6 +24,7 @@
     "morgan": "~1.8.1",
     "pg": "latest",
     "serve-favicon": "~2.4.2",
-    "zombie": "latest"
+    "zombie": "latest",
+    "database-cleaner": "latest"
   }
 }
